--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#mongodb
+spring.data.mongodb.uri=mongodb+srv://admin:TYhLXYPRN4VRzuXs@fashion-shop.s8aoudi.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=fashion
+#logging
+logging.level.org.springframework.data=debug
