--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #mongodb
 spring.data.mongodb.uri=mongodb+srv://admin:TYhLXYPRN4VRzuXs@fashion-shop.s8aoudi.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=fashion
+spring.data.mongodb.auto-index-creation=true
 #logging
 #logging.level.org.springframework.data=debug
 
@@ -14,11 +15,20 @@ app.allow.origin=http://localhost:3000
 
 #SwaggerUI
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.docExpansion=none
+springdoc.swagger-ui.disable-swagger-default-url=true
+
+#File upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#Cloudinary
+
 
 #LoginGoogle
-#spring.security.oauth2.client.registration.google.client-id=968786308056-9k67nqlp92f8m7ak4060b75n1pjsfj0n.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=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
-#spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.client-id=968786308056-9k67nqlp92f8m7ak4060b75n1pjsfj0n.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
 ##LoginFacebook
 ##spring.security.oauth2.client.registration.facebook.client-id=2280593552116352
 ##spring.security.oauth2.client.registration.facebook.client-secret=a107cb07101539aa2e52b83a68feb698
