update add product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.uri=mongodb+srv://admin:TYhLXYPRN4VRzuXs@fashion-shop.s8aoud
 spring.data.mongodb.database=fashion
 spring.data.mongodb.auto-index-creation=true
 #logging
-#logging.level.org.springframework.data=debug
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 #JWT
 #24 * 60 * 60 * 1000 = 24 hour 86400000
