--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Client origin
-app.allow.origin=http://localhost:3000,https://fashion-shop-7qnc32n7e-nht0910201.vercel.app
+app.allow.origin=http://localhost:3000,https://fashion-shop-7qnc32n7e-nht0910201.vercel.app,\
+  https://fashion-shop-nht0910201.vercel.app,https://fashion-shop-git-main-nht0910201.vercel.app,\
+  https://fashion-shop-one.vercel.app
 app.client.host=http://localhost:3000
 
 #LoginGoogle
