update price and discount

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://admin:TYhLXYPRN4VRzuXs@fashion-shop.s8aoudi.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.uri=mongodb://localhost:27017/?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://admin:TYhLXYPRN4VRzuXs@fashion-shop.s8aoudi.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/?retryWrites=true&w=majority
 spring.data.mongodb.database=fashion
 spring.data.mongodb.auto-index-creation=true
 #logging
