--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fsshopmail01@gmail.com
 #Pass: fsshop1.
-spring.mail.password=jqjozfxykynfoeny
+spring.mail.password=bqxxqtnioxuxpxwv
+  #jqjozfxykynfoeny
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.default-encoding=utf-8
@@ -33,11 +34,11 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 
 #LoginFacebook
 ######LIVE######
-spring.security.oauth2.client.registration.facebook.client-id=2280593552116352
-spring.security.oauth2.client.registration.facebook.client-secret=a107cb07101539aa2e52b83a68feb698
+#spring.security.oauth2.client.registration.facebook.client-id=2280593552116352
+#spring.security.oauth2.client.registration.facebook.client-secret=a107cb07101539aa2e52b83a68feb698
 ######TEST######
-#spring.security.oauth2.client.registration.facebook.client-id=2142348342591848
-#spring.security.oauth2.client.registration.facebook.client-secret=9d3d2bb4d3fb55a7da225928ffe58173
+spring.security.oauth2.client.registration.facebook.client-id=2142348342591848
+spring.security.oauth2.client.registration.facebook.client-secret=9d3d2bb4d3fb55a7da225928ffe58173
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
 
