--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         name: artifact
         path: target/*.jar
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Deploy
