--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3.5.3
     - name: Build with maven
-      run: mvn spring-boot:run
+      run: mvn install
     - name: Upload JAR
       uses: actions/upload-artifact@v2
       with:
